Added the car app library dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,12 @@ android {
             useSupportLibrary true
         }
     }
+    buildscript {
+        ext {
+            // All versions can be found at https://developer.android.com/jetpack/androidx/releases/car-app
+            car_app_library_version = '1.3.0-rc01'
+        }
+    }
 
     buildTypes {
         release {
